--- a/vite-react-basic-app/index.html
+++ b/vite-react-basic-app/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <link rel="stylesheet" href="src/index.css">
 </body>
 
 </html>
